--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
         from { opacity: 0; transform: translateY(20px); }
         to { opacity: 1; transform: translateY(0); }
       }
+      @keyframes marquee {
+        0% { transform: translateX(100%); }
+        100% { transform: translateX(-100%); }
+      }
+      .animate-marquee {
+          animation: marquee 15s linear infinite;
+      }
       .animate-fade-in-up { animation: fade-in-up 0.5s ease-out forwards; }
       .scrollbar-hide::-webkit-scrollbar { display: none; }
       .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
